# voice2voice-banking-assistant

./: .dockerignore  .env.sample  .gitignore  Makefile  README.md  docker-compose.yaml
src/backend/: pyproject.toml  server.py
src/backend/ai_services/: agent.py  factories.py  tools.py
src/backend/api/: dependencies.py  lifespan.py
src/backend/config/: settings.py
src/backend/convo_history_db/: actions.py  connection.py
src/backend/customer_transaction_db/: connection.py
src/backend/nlp_processor/: text_to_speech.py
src/backend/tests/: conftest.py
src/backend/tests/ai_services_tests/: test_utils.py
src/backend/tests/config_tests/: test_settings.py
src/backend/tests/convo_history_db_tests/: test_convo_db_connection.py
src/backend/tests/customer_transaction_db_tests/: test_connection.py
src/backend/tests/nlp_processor_tests/: test_speech_to_text.py
src/frontend/: README.md  package.json
src/frontend/public/: index.html  manifest.json
src/frontend/src/: App.css  App.tsx  index.tsx
src/frontend/src/components/: ChatContainer.tsx  Header.tsx  RecordingButtons.tsx  Status.tsx
src/frontend/src/tests/: ChatContainer.test.tsx  RecordingButtons.test.tsx  Status.test.tsx
